Added a Conditions instance to the DesignPattern class; removed the conditions list. Added convenience methods to Conditions for cleaner usage code.